--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "mongoose": "^8.1.2",
     "next": "^13.5.6",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
